8398
Since 5d9cde105e8 this fails in an orderly fashion:
{noformat}
test/files/pos/t6359.scala:3: error: implementation restriction: nested object is not allowed in value class
This restriction is planned to be removed in subsequent releases.
      object X
             ^
one error found
{noformat}
